# CTNet

./: CTNet_2a_82.91.ipynb  Conformer_fine_tune_2a_77.66_2b_85.87.ipynb  main_cross_subject_LOSO.ipynb  main_subject_cross.py  main_subject_specific.py  model.py  other models.py  preprocessing_for_2a.py  preprocessing_for_2b.py  pyproject.toml  utils.py
plot_figures/: confusion_matrix.py  depth.py  heads.py  length.py
